--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="notification_channel_description">Geofence status notification</string>
     <string name="content_text">Location Reminder</string>
     <string name="select_title">Please select title</string>
-    <string name="select_location">Please select location</string>
+    <string name="select_location">Select location</string>
     <string name="geofences_not_added">Problem in adding geofences.</string>
     <string name="welcome">Welcome</string>
     <string name="err_enter_title">Please enter title</string>
